examples/datalog/11_types/25_string_lexicographic.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_string_lex
Knowledge graph 'test_string_lex' created.
Switched to knowledge graph: test_string_lex
> .kg use test_string_lex
Switched to knowledge graph: test_string_lex
> +words[("apple",), ("banana",), ("cherry",), ("apricot",)].
Inserted 4 fact(s) into 'words'.
> ordered(A, B) :- words(A), words(B), A < B.
No results.
(session: 1 rule(s))
> ?- ordered(A, B).
No results.
> +min_word(<MIN:W>) :- words(W).
Script error: Parse error: Invalid term: '<MIN:W>'
